@@ -1,5 +1,6 @@
 20010320
- - (bal) glob.c update to added GLOB_LIMITS.
+ - (bal) glob.c update to added GLOB_LIMITS (OpenBSD CVS).
+ - (bal) glob.c update to set gl_pathv to NULL (OpenBSD CVS).
 
 20010319
  - (djm) Seed PRNG at startup, rather than waiting for arc4random calls to 
@@ -4630,4 +4631,4 @@
  - Wrote replacements for strlcpy and mkdtemp
  - Released 1.0pre1
 
-$Id: ChangeLog,v 1.986 2001/03/19 18:58:13 mouring Exp $
+$Id: ChangeLog,v 1.987 2001/03/19 19:00:09 mouring Exp $
